--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
          <strong>Time:</strong> 12:15 PM</p>
       <p><strong>Meeting Spot:</strong> Inside the cafeteria—small space, big energy. Look for friendly faces near the windows or someone stretching by the coffee bar.</p>
       <p><strong>Route:</strong> We walk around the perimeter of the campus buildings—an easy loop with fresh air and familiar paths.</p>
-      <p><strong>Duration:</strong> Usually around 30–45 minutes, depending on pace and conversation.</p>
+      <p><strong>Duration:</strong> Usually around 30 minutes, depending on pace and conversation.</p>
     </section>
 
     <section class="card">
       <h2>🌿 Welcome</h2>
-      <p>This group is open to anyone on the Petaluma campus who wants to move, connect, or just take a quiet break from the week.</p>
+      <p>This group is for anyone on the Petaluma campus who wants to move a little, connect casually, or just take a quiet break from the week.</p>
       <ul>
         <li><strong>Come as you are:</strong> street shoes are fine</li>
         <li><strong>Weather:</strong> we walk unless it’s unsafe</li>
